# u5tools

./: .gitignore  Makefile.am  NEWS  README  README.md  UltimaVTools.sln  alt-build.xml  build.gradle  build.xml  configure.ac  pom.xml  settings.gradle  u5-tools.ps1  u5tools.in  ultima5.in
Powershell-Module/: LICENSE  README.md  cheatsheet.txt
Powershell-Module/Docs-en-US/: Get-U5SavedGame.md  Set-U5CommonSettings.md  Update-U5SavedGame.md
Powershell-Module/RWTodd.Ultima5Tools/: RWTodd.Ultima5Tools.psd1  RWTodd.Ultima5Tools.psm1
Powershell-Module/RWTodd.Ultima5Tools/en-US/: RWTodd.Ultima5Tools-help.xml
RuneFonts/: .gitattributes  UltimaRunes--dotSpace.sfd  UltimaRunes.sfd  readme.txt
U5Runes/: App.xaml  MainWindow.xaml  MainWindow.xaml.cs  RuneGlyphs.xaml  U5Runes.csproj
U5Runes/Properties/: AssemblyInfo.cs  Resources.Designer.cs
WPF-Utilities/U5Runes/: MainWindow.xaml.cs  U5Runes.csproj
WPF-Utilities/U5Runes/Properties/: Resources.Designer.cs
core/: build.gradle
nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
org.rwtodd.u5tools.core/: pom.xml
org.rwtodd.u5tools.runes/: pom.xml
org.rwtodd.u5tools.saves/: pom.xml
runes/: build.gradle
saves/: build.gradle
src/org.rwtodd.u5tools.core/classes/: module-info.java
src/org.rwtodd.u5tools.runes/: module-info.java
src/org.rwtodd.u5tools.saves/classes/: module-info.java
u5runes/: Makefile.am  runes.in
u5sav/: Makefile.am  sav.in
wpf-version/: UltimaVTools.sln
wpf-version/U5Runes/: App.xaml.cs  MainWindow.xaml  U5Runes.csproj
(+17 files in other folders)
